feat: add reconnect buttons for host and player roles with session management

--- a/qlash.html
+++ b/qlash.html
@@ -26,6 +26,8 @@
             <h2>Wähle deine Rolle</h2>
             <button id="host-btn" class="btn">Quiz hosten</button>
             <button id="player-btn" class="btn">Quiz beitreten</button>
+            <button id="reconnect-host-btn" class="btn btn-reconnect hidden">Erneut als Host verbinden</button>
+            <button id="reconnect-player-btn" class="btn btn-reconnect hidden">Erneut zum Quiz verbinden</button>
         </div>
 
         <div id="host-view" class="view card">
