Refactor server to rename from Qlash to Quiz, update configurations, and enhance player name sanitization
- Updated README.md to reflect the new project name and configuration file.
- Modified fly.toml to remove unnecessary HTTP health checks.
- Changed package.json and package-lock.json to rename the server from "qlash-server" to "quiz-server".
- Enhanced server.js with improved session ID generation and player name sanitization.
- Adjusted maximum players per room from 300 to 240 and updated related error messages.
- Updated WebSocket handling to ensure proper session validation for host actions.
- Renamed client-side files in sw.js to match the new project naming convention.

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -6,7 +6,7 @@
   <title>Datenschutz & Datenbank</title>
   <link rel="stylesheet" href="theme.css">
   <script src="theme.js"></script>
-  <link rel="stylesheet" href="qlash.css">
+  <link rel="stylesheet" href="quiz.css">
 </head>
 <body>
 
