--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <i class="fas fa-book-open"></i>
                 <span>Alleine lernen (Aufgabenkarten)</span>
             </a>
-            <a href="qlash.html" id="quiz-btn" class="choice-button quiz-button">
+            <a href="quiz.html" id="quiz-btn" class="choice-button quiz-button">
                 <i class="fas fa-gamepad"></i>
                 <span>Wissen testen (Multiplayer Quiz)</span>
             </a>
