--- a/quiz.html
+++ b/quiz.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="theme.css">
     <script src="theme.js"></script>
     <script src="sanitize.js"></script>
-    <link rel="stylesheet" href="qlash.css">
+    <link rel="stylesheet" href="quiz.css">
 </head>
 
 <body>
@@ -179,7 +179,7 @@
     </footer>
 
     <!-- Main Application Script -->
-    <script src="qlash.js"></script>
+    <script src="quiz.js"></script>
 </body>
 
 </html>
